--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -1,6 +1,7 @@
 \chapter{Symmetry and SAT}\label{chap:symmetryinsat}
 \minitoc
-Despite the NP-Completeness character of the SAT problem, state-of-the-art solvers are able to treat many industrial problems.This is mainly due to the capacity of SAT solvers to prune search space using, for instance , learnt clauses.
+Despite the NP-Completeness character of the SAT problem, state-of-the-art solvers are able to treat many industrial problems.
+This is mainly due to the capacity of SAT solvers to prune search space using, for instance, learnt clauses.
 Another way to accelerate the solving is the exploitation of symmetries.
 These are common in real life. \\
 Consider the problem of searching for a pattern in butterfly wings.
@@ -11,8 +12,7 @@ exploit them to accelerate the solving in the SAT context.
 %Some instances exhibit symmetries and not taking them into account forces solvers to needlessly explore isomorphic search space.  
 
 \section{Group theory basics} 
-Since symmetries belong to a branch of mathematics called group theory.
-This section gives us an overview of this.
+Since symmetries belong to a branch of mathematics called group theory, this section gives us an overview.
 \subsection{Groups}
 
 %\begin{theoo}[Pythagoras' theorem]
@@ -21,12 +21,12 @@ This section gives us an overview of this.
 %\end{theoo}
 \begin{definition}[Group]
  A \emph{group} is a structure $\langle G, * \rangle$, where $G$ is a non-empty set and $*$ a binary
- operation such as the following axioms are satisfied:
+ operation such that the following axioms are satisfied:
  \begin{itemize}[noitemsep,nolistsep]
   \item \emph{associativity}: $\forall a, b, c \in G, (a * b) * c = a * (b * c)$
   \item \emph{closure}: $\forall a, b \in G, a * b \in G$.
   \item \emph{identity}: $\forall a \in G, \exists e$ such that $ a * e = e * a = a$
-  \item \emph{inverse}:  $\forall a \in G, \exists b \in G$, commonly denoted $a^{-1}$ such that
+  \item \emph{inverse}:  $\forall a \in G, \exists b \in G$, commonly denoted $a^{-1}$, such that
   $a * a^{-1} = a^{-1} * a = e$
  \end{itemize}
 \end{definition}
@@ -44,8 +44,10 @@ b & = & b * e & \\
 & = & e * c       & b \text{ is an inverse of } a, \text{so } e = a * b\\
 & = & c           &   \text{\emph{identity} rule}
 \end{array}$
+
+
 The structure $\langle G, * \rangle$ is denoted simply $G$ when clear from the context that G is a group
-with a binary operation. In this thesis, we only consider \emph{finite} groups, i.e. group with a finite number of elements.
+with a binary operation. In this thesis, we only consider \emph{finite} groups, i.e. groups with a finite number of elements.
 \begin{definition}[Subgroup]
 Given a group $G$, a \emph{subgroup} is a non-empty subset of $G$ which is also a group with 
 the same binary operation. We denote $H \leq G$, the subgroup $H$ of $G$.
@@ -83,12 +85,13 @@ So the permutation in cycle notation will be
  $g$ = ($x_1 \enskip x_2 \enskip x_3$) ($x_5 \enskip x_6$)
 \end{center}
 \begin{definition}[Support of a permutation]
- A \emph{support} of the permutation $g$, noted $\support_{g}$, is the elements that are not mapped to themselves:
+ The \emph{support} of the permutation $g$, noted $\mathit{\support_{g}}$, is the set of elements that are not mapped to themselves:
  \begin{center}
   $\support_{g} = \{ x \in X \mid g.x \neq x\}$
  \end{center}
 \end{definition}
 
+\hakan{REVOIR}
 \begin{definition}[Stabilized variable over permutation]
  A variable $x$ is \emph{stable} by a permutation $g$  iff $x \notin \support_g$.
 \end{definition}
